--- a/Client/idpaClient/idpaServer.csproj
+++ b/Client/idpaClient/idpaServer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F077087F-D3CD-4E5C-BF59-014B38B24297}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>idpaClient</RootNamespace>
-    <AssemblyName>idpaClient</AssemblyName>
+    <RootNamespace>idpaServer</RootNamespace>
+    <AssemblyName>idpaServer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -52,7 +52,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>idpaServer.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>58353C7D7A6768BC391D005213AA9A95332AEC81</ManifestCertificateThumbprint>
