Cleanup Folder Structure

--- a/Server/idpaClient/idpaServer.csproj
+++ b/Server/idpaClient/idpaServer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F077087F-D3CD-4E5C-BF59-014B38B24297}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>idpaServer</RootNamespace>
     <AssemblyName>idpaServer</AssemblyName>
