--- a/Server/idpaClient/idpaServer.csproj
+++ b/Server/idpaClient/idpaServer.csproj
@@ -70,6 +70,12 @@
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IdpaTools">
+      <HintPath>..\..\IdpaTools\bin\Debug\IdpaTools.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceTools">
+      <HintPath>C:\Users\Tobias\Downloads\ServiceTools.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -82,14 +88,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
     <Compile Include="FileScanner.cs" />
+    <Compile Include="Keylogger.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="Keylogger.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Keylogger.Designer.cs">
-      <DependentUpon>Keylogger.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -97,7 +99,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Serilizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -105,9 +106,6 @@
     <None Include="idpaClient_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Keylogger.resx">
-      <DependentUpon>Keylogger.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
