--- a/idpaServer/idpaServer.csproj
+++ b/idpaServer/idpaServer.csproj
@@ -96,6 +96,7 @@
     <Compile Include="FileScanner.cs" />
     <Compile Include="Keylogger.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="PrintScreen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
