--- a/idpaClient/IdpaClient.csproj
+++ b/idpaClient/IdpaClient.csproj
@@ -34,6 +34,7 @@
   <PropertyGroup>
     <StartupObject>IdpaClient.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="IdpaTools">
       <HintPath>..\..\..\IdpaTools\bin\Debug\IdpaTools.dll</HintPath>
