Added UI Logger, Added better class structure in the Client

--- a/idpaServer/Properties/Settings.settings
+++ b/idpaServer/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="id" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="printScreenCount" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
