Added Search Functionality

--- a/idpaClient/IdpaClient.csproj
+++ b/idpaClient/IdpaClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{00DC5F9F-589C-46A9-B3CF-8D5B2C1FC4E2}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IdpaClient</RootNamespace>
     <AssemblyName>IdpaClient</AssemblyName>
